# adventofcode

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  eslint.config.js  generate.js  package-lock.json  package.json  run.js
2023/: CMakeLists.txt  Day1.1.ps1  Day1.2.ps1  Day2.1.ps1  Day2.2.ps1  Day3.1.ps1  Day3.2.ps1  Day4.1.ps1  Day4.2.ps1  Day5.1.ps1  Day5.2.ps1  Day5.txt
2024/: AdventOfCode.cpp  AdventOfCode.h  CMakeLists.txt  Day11.1.ps1  Day11.2-2024toeven.ps1  Day11.2.cpp  Day11.2.ps1  Day11.cpp  Day2.1.ps1  Day3.1.ps1  Day3.2.ps1  Day4.1.ps1  Day4.2.ps1  Day5.1.ps1  Day5.2.ps1  Day6.1.bis.ps1  Day6.2.bis.ps1  Day7.1.ps1  Day7.2.ps1  Day8.1.ps1  Day9.1.ps1  Day9.2.DEBUG.ps1  Day9.2.cpp  Day9.2.ps1  Math.h  Point.cpp  Point.h  Vector2D.cpp  Vector2D.h
2024/Day1/: Day1.1.ps1  Day1.2.ps1
2024/Day10/: Day10.1.ps1  Day10.2.ps1
2024/Day11/: Day11.1.ps1
2024/Day12/: CMakeLists.txt  CMakeLists.txt.disabled  Day12.2.cpp  Day12.cpp
2024/Day12.2/: CMakeLists.txt  Day12.2.cpp
2024/Day13/: CMakeLists.txt  CMakeLists.txt.disabled  Day13.1.ps1  Day13.2.cpp  Day13.2.ps1  Day13.2.thread.cpp  Day13.2bis.ps1
2024/Day13.thread/: CMakeLists.txt  CMakeLists.txt.disabled  Day13.2.thread.cpp
2024/Day14/: CMakeLists.txt  Day14.1.cpp  Day14.2.cpp
2024/Day15/: CMakeLists.txt  Day15.1.cpp  Day15.2.cpp
2024/Day16/: CMakeLists.txt  Compass.cpp  Compass.h  Constant.h  Day16.1.cpp  Maze.cpp  Maze.h  MazeRunner.cpp  MazeRunner.h  MazeRunner__Run_Backup.cpp  Reindeer.cpp  Reindeer.h  oldday16.1.cppback.cpp
2024/Day16-v2/: CMakeLists.txt  Constant.h  Day16.1.cpp  Day16.2.cpp  maze.cpp  maze.h  maze_test.cpp
2024/Day16/Test/: test_Compass.cpp  test_Maze.cpp
2024/Day17/: CMakeLists.txt  Constant.h  Day17.1-decompiled.ps1  Day17.1-v2.ps1  Day17.1.cpp  Day17.1.ps1  Day17.2-brute.cpp  Day17.2.cpp  Day17.2.ps1  opcode.cpp  opcode.h
2024/Day18/: CMakeLists.txt  Compass.cpp  Compass.h  Constant.h  Day18.1.cpp  Day18.2.cpp  Map.cpp  Map.h  Maze.cpp  Maze.h  MazeRunner.cpp  MazeRunnerPosition.cpp  MazeSegment.cpp
2024/Day18/Test/: test_charmap.cpp
2024/Day19/: Day19.1.ps1  Day19.2-v3.ps1  Day19.2-v4.ps1  Day19.2-v5.ps1  Day19.2-v6.ps1  Day19.2.ps1  Day19.ps1  Day19.real.psd1  Day19.test.psd1
2024/Day19/AdventOfCode.2024.19.Dictionary/: Blueprint.psd1  Version.psd1
2024/Day19/AdventOfCode.2024.19.Dictionary/source/init/: Init.ps1
2024/Day19/AdventOfCode.2024.19.Dictionary/source/public/: ConvertTo-PatternList.ps1  Find-DictionaryItemValue.ps1  Format-DictionaryItem.ps1  Get-Dictionary.ps1  Get-DictionaryItem.ps1  Get-DictionaryItemValue.ps1  Measure-Dictionary.ps1  Measure-DictionaryItem.ps1  New-DictionaryItem.ps1  New-DictionaryItemValue.ps1  New-ProgressBarObject.ps1  Remove-DictionaryItem.ps1  Remove-DictionaryItemValue.ps1  Reset-Dictionary.ps1  Reset-DictionaryItem.ps1  Test-Dictionary.ps1  Test-DictionaryItem.ps1  Test-DictionaryItemValue.ps1
2024/Day19/AdventOfCode.2024.19.Dictionary/test/public/: ConvertTo-PatternList.Tests.ps1  Find-DictionaryItemValue.Tests.ps1  Format-DictionaryItem.Tests.ps1  Get-Dictionary.Tests.ps1  Get-DictionaryItem.Tests.ps1  Get-DictionaryItemValue.Tests.ps1  Measure-Dictionary.Tests.ps1  Measure-DictionaryItem.Tests.ps1  New-DictionaryItem.Tests.ps1  New-DictionaryItemValue.Tests.ps1  New-ProgressBarObject.Tests.ps1  Remove-DictionaryItem.Tests.ps1  Remove-DictionaryItemValue.Tests.ps1  Reset-Dictionary.Tests.ps1  Reset-DictionaryItem.Tests.ps1  Test-Dictionary.Tests.ps1  Test-DictionaryItem.Tests.ps1  Test-DictionaryItemValue.Tests.ps1
2024/Day2/: Day2.2.ps1
2024/Day20/: CMakeLists.txt  Constant.h  Day20.1.cpp  Day20.2.cpp
2024/Day21/: Day21.1.ps1  Day21.2.ps1  Keypads.psd1
2024/Day21-nodejs/: Day21.1.js  Day21.2.js  Keypad.js  RobotChain.js  RobotChainOptimized.js  package.json
2024/Day21-nodejs/lib/: fileReader.js
2024/Day4/: Day4.1.ps1  Day4.2.ps1
2024/Day5/: Day5.1.ps1  Day5.2.ps1
2024/Day6/: Day6.1.ps1  Day6.2.ps1
2024/Day7/: Day7.1.ps1
2024/Day8/: Day8.1.ps1  Day8.2.ps1
2024/Day9/: CMakeLists.txt  CMakeLists.txt.disabled  Day9.2.c++  Day9.2.cpp
2024/Input/: Day1.txt
2024/include/: AdventOfCode.h  Point.h  Vector2D.h
2024/lib/: Point.c++
2024/src/: AdventOfCode.cpp  Point.cpp  Vector2D.cpp
2025/: CMakeLists.txt  README.md  package.json
2025/Day1/: Day1.1.js  Day1.2.js  README.md
2025/Day2/: Day2.1.js  Day2.2.js  README.md
2025/Day3/: Day3.1.js  Day3.2.js
2025/Day4/: Day4.1.js  Day4.2.js
2025/Day5/: Day5.1.js  Day5.2.js
2025/Day6/: Day6.1.js  Day6.2.js
2025/lib/: index.js  logger.js
Template/: EmptyScript.ps1  Matrix.ps1
lib/: CMakeLists.txt  charmap.cpp  charmap.h  math.cpp  math.h  maze.cpp  utils.js
lib/test/: test_charmap.cpp  test_math.cpp
lib/tmp/: AdventOfCode.cpp  Math.cpp
