cmake_minimum_required(VERSION 3.5.0)

# GLOBAL_LIB_PFX and GLOBAL_TEST_PFX are set at the level above
# message(GLOBAL_LIB_PFX: ${GLOBAL_LIB_PFX})
# message(GLOBAL_TEST_PFX: ${GLOBAL_TEST_PFX})

add_library(${GLOBAL_LIB_PFX}charmap STATIC ./charmap.cpp ./charmap.h)
add_library(${GLOBAL_LIB_PFX}math STATIC ./math.cpp ./math.h)

enable_testing()

set(TARGET_NAME ${GLOBAL_TEST_PFX}charmap)
add_executable(${TARGET_NAME} test/test_charmap.cpp)
target_link_libraries(${TARGET_NAME} ${GLOBAL_LIB_PFX}charmap)
set_cxx_20(${TARGET_NAME})
add_test(NAME ${GLOBAL_TEST_PFX}charmap_access-const COMMAND $<TARGET_FILE:${TARGET_NAME}> access-const)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_access-exception COMMAND $<TARGET_FILE:${TARGET_NAME}> access-const)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_access-reference COMMAND $<TARGET_FILE:${TARGET_NAME}> access-reference)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_char_find COMMAND $<TARGET_FILE:${TARGET_NAME}> char_find)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_column_as_string COMMAND $<TARGET_FILE:${TARGET_NAME}> column_as_string)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_neighbours_if COMMAND $<TARGET_FILE:${TARGET_NAME}> neighbours_if)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_neighbours_if-char_val_is COMMAND $<TARGET_FILE:${TARGET_NAME}> neighbours_if-char_val_is)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_neighbours_if-char_val_is-no_match COMMAND $<TARGET_FILE:${TARGET_NAME}> neighbours_if-char_val_is-no_match)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_neighbours_if-only-NSEW COMMAND $<TARGET_FILE:${TARGET_NAME}> neighbours_if-only-NSEW)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_row_as_string COMMAND $<TARGET_FILE:${TARGET_NAME}> row_as_string)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset-bottom_left COMMAND $<TARGET_FILE:${TARGET_NAME}> subset-bottom_left)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset-bottom_right COMMAND $<TARGET_FILE:${TARGET_NAME}> subset-bottom_right)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset-out_of_bounds COMMAND $<TARGET_FILE:${TARGET_NAME}> subset-out_of_bounds)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset-out_of_bounds-truncate COMMAND $<TARGET_FILE:${TARGET_NAME}> subset-out_of_bounds-truncate)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset-out_of_bounds-truncate-empty COMMAND $<TARGET_FILE:${TARGET_NAME}> subset-out_of_bounds-truncate-empty)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset-top_left COMMAND $<TARGET_FILE:${TARGET_NAME}> subset-top_left)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset-top_right COMMAND $<TARGET_FILE:${TARGET_NAME}> subset-top_right)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_find-horizontal COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_find-horizontal)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_find-horizontal-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_find-horizontal-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_find-one COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_find-one)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_find-one-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_find-one-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_find-rect COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_find-rect)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_find-rect-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_find-rect-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_find-vertical COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_find-vertical)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_find-vertical-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_find-vertical-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_find-whole COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_find-whole)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_find-whole-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_find-whole-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-bottom_left-2-3 COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-bottom_left-2-3)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-bottom_left-2-3-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-bottom_left-2-3-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-bottom_middle-3-3 COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-bottom_middle-3-3)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-not-bottom_middle-3-3 COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-not-bottom_middle-3-3)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-bottom_middle-3-3-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-bottom_middle-3-3-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-not-bottom_middle-3-3-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-not-bottom_middle-3-3-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-bottom_right-3-2 COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-bottom_right-3-2)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-one COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-one)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-not-one COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-not-one)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-one-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-one-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-out_of_bounds COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-out_of_bounds)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-out_of_bounds-truncate COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-out_of_bounds-truncate)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-out_of_bounds-truncate-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-out_of_bounds-truncate-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-out_of_bounds-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-out_of_bounds-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-top_left-3-2 COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-top_left-3-2)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-not-top_left-3-2 COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-not-top_left-3-2)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-top_left-3-2-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-top_left-3-2-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-top_right-2-3 COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-top_right-2-3)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_matches-top_right-2-3-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_matches-top_right-2-3-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_replace COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_replace)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_replace-out_of_bounds COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_replace-out_of_bounds)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_replace-out_of_bounds-truncate COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_replace-out_of_bounds-truncate)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_replace-out_of_bounds-truncate-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_replace-out_of_bounds-truncate-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_subset_replace-wild_character COMMAND $<TARGET_FILE:${TARGET_NAME}> subset_replace-wild_character)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_transpose COMMAND $<TARGET_FILE:${TARGET_NAME}> transpose)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_rotate_clockwise COMMAND $<TARGET_FILE:${TARGET_NAME}> rotate_clockwise)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_rotate_counter_clockwise COMMAND $<TARGET_FILE:${TARGET_NAME}> rotate_counter_clockwise)
add_test(NAME ${GLOBAL_TEST_PFX}charmap_inverse COMMAND $<TARGET_FILE:${TARGET_NAME}> inverse)


set(TARGET_NAME ${GLOBAL_TEST_PFX}math)
add_executable(${TARGET_NAME} test/test_math.cpp)
target_link_libraries(${TARGET_NAME} ${GLOBAL_LIB_PFX}math)
set_cxx_20(${TARGET_NAME})
add_test(NAME ${GLOBAL_TEST_PFX}math_count_digits-zero COMMAND $<TARGET_FILE:${TARGET_NAME}> count_digits-zero)
add_test(NAME ${GLOBAL_TEST_PFX}math_count_digits-3 COMMAND $<TARGET_FILE:${TARGET_NAME}> count_digits-3)
add_test(NAME ${GLOBAL_TEST_PFX}math_count_digits-10 COMMAND $<TARGET_FILE:${TARGET_NAME}> count_digits-10)
add_test(NAME ${GLOBAL_TEST_PFX}math_count_digits-LLONG_MAX COMMAND $<TARGET_FILE:${TARGET_NAME}> count_digits-LLONG_MAX)
add_test(NAME ${GLOBAL_TEST_PFX}math_count_digits_is_even-0 COMMAND $<TARGET_FILE:${TARGET_NAME}> count_digits_is_even-0)
add_test(NAME ${GLOBAL_TEST_PFX}math_count_digits_is_even-123 COMMAND $<TARGET_FILE:${TARGET_NAME}> count_digits_is_even-123)
add_test(NAME ${GLOBAL_TEST_PFX}math_count_digits_is_even-1234 COMMAND $<TARGET_FILE:${TARGET_NAME}> count_digits_is_even-1234)
add_test(NAME ${GLOBAL_TEST_PFX}math_count_digits_is_even-1234567890 COMMAND $<TARGET_FILE:${TARGET_NAME}> count_digits_is_even-1234567890)
add_test(NAME ${GLOBAL_TEST_PFX}math_count_digits_is_even-LLONG_MAX COMMAND $<TARGET_FILE:${TARGET_NAME}> count_digits_is_even-LLONG_MAX)
add_test(NAME ${GLOBAL_TEST_PFX}math_factorize-1 COMMAND $<TARGET_FILE:${TARGET_NAME}> factorize-1)
add_test(NAME ${GLOBAL_TEST_PFX}math_factorize-2 COMMAND $<TARGET_FILE:${TARGET_NAME}> factorize-2)
add_test(NAME ${GLOBAL_TEST_PFX}math_factorize-3 COMMAND $<TARGET_FILE:${TARGET_NAME}> factorize-3)
add_test(NAME ${GLOBAL_TEST_PFX}math_factorize-4 COMMAND $<TARGET_FILE:${TARGET_NAME}> factorize-4)
add_test(NAME ${GLOBAL_TEST_PFX}math_factorize-6 COMMAND $<TARGET_FILE:${TARGET_NAME}> factorize-6)
add_test(NAME ${GLOBAL_TEST_PFX}math_factorize-12 COMMAND $<TARGET_FILE:${TARGET_NAME}> factorize-12)
add_test(NAME ${GLOBAL_TEST_PFX}math_factorize-100 COMMAND $<TARGET_FILE:${TARGET_NAME}> factorize-100)
add_test(NAME ${GLOBAL_TEST_PFX}math_is_prime-2 COMMAND $<TARGET_FILE:${TARGET_NAME}> is_prime-2)
add_test(NAME ${GLOBAL_TEST_PFX}math_is_prime-4 COMMAND $<TARGET_FILE:${TARGET_NAME}> is_prime-4)
add_test(NAME ${GLOBAL_TEST_PFX}math_is_coprime-5-9 COMMAND $<TARGET_FILE:${TARGET_NAME}> is_coprime-5-9)
add_test(NAME ${GLOBAL_TEST_PFX}math_is_coprime-6-9 COMMAND $<TARGET_FILE:${TARGET_NAME}> is_coprime-6-9)
add_test(NAME ${GLOBAL_TEST_PFX}math_greatest_common_divisor-48-18 COMMAND $<TARGET_FILE:${TARGET_NAME}> greatest_common_divisor-48-18)
add_test(NAME ${GLOBAL_TEST_PFX}math_greatest_common_divisor-101-103 COMMAND $<TARGET_FILE:${TARGET_NAME}> greatest_common_divisor-101-103)
add_test(NAME ${GLOBAL_TEST_PFX}math_greatest_common_divisor_extended-35-15 COMMAND $<TARGET_FILE:${TARGET_NAME}> greatest_common_divisor_extended-35-15)
add_test(NAME ${GLOBAL_TEST_PFX}math_modular_inverse-3-11 COMMAND $<TARGET_FILE:${TARGET_NAME}> modular_inverse-3-11)
add_test(NAME ${GLOBAL_TEST_PFX}math_modular_inverse_extended-3-11 COMMAND $<TARGET_FILE:${TARGET_NAME}> modular_inverse_extended-3-11)
add_test(NAME ${GLOBAL_TEST_PFX}math_modular_inverse_fermat-3-11 COMMAND $<TARGET_FILE:${TARGET_NAME}> modular_inverse_fermat-3-11)
add_test(NAME ${GLOBAL_TEST_PFX}math_modular_power-2-10-1000 COMMAND $<TARGET_FILE:${TARGET_NAME}> modular_power-2-10-1000)
add_test(NAME ${GLOBAL_TEST_PFX}math_least_common_multiple-12-15 COMMAND $<TARGET_FILE:${TARGET_NAME}> least_common_multiple-12-15)
add_test(NAME ${GLOBAL_TEST_PFX}math_least_common_multiple-vector COMMAND $<TARGET_FILE:${TARGET_NAME}> least_common_multiple-vector)
